iotbx/cif/cifProtoParser.py
# $ANTLR 3.1.2 cifProto.g 2010-06-08 11:30:38

import sys
from antlr3 import *
from antlr3.compat import set, frozenset

import iotbx.cif
from cctbx.array_family import flex



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
DOUBLE_QUOTED_STRING=29
CHAR_STRING=13
EXPONENT=12
NON_BLANK_CHAR=27
SEMI_COLON_TEXT_FIELD=14
SINGLE_QUOTED_STRING=28
DOUBLE_QUOTE=16
GLOBAL_=24
ORDINARY_CHAR=18
WHITESPACE=5
SAVE=7
VERSION=26
EOF=-1
TAG=8
SINGLE_QUOTE=17
T__31=31
T__32=32
STOP_=25
EOL=15
T__33=33
NON_BLANK_CHAR_=19
T__34=34
T__35=35
COMMENTS=4
T__36=36
SAVE_FRAME_HEADING=6
SAVE_=23
ANY_PRINT_CHAR=21
TEXT_LEAD_CHAR=20
LOOP_=10
DIGIT=11
UNQUOTED_STRING=30
DATA_=22
DATA_BLOCK_HEADING=9

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "COMMENTS", "WHITESPACE", "SAVE_FRAME_HEADING", "SAVE", "TAG", "DATA_BLOCK_HEADING",
    "LOOP_", "DIGIT", "EXPONENT", "CHAR_STRING", "SEMI_COLON_TEXT_FIELD",
    "EOL", "DOUBLE_QUOTE", "SINGLE_QUOTE", "ORDINARY_CHAR", "NON_BLANK_CHAR_",
    "TEXT_LEAD_CHAR", "ANY_PRINT_CHAR", "DATA_", "SAVE_", "GLOBAL_", "STOP_",
    "VERSION", "NON_BLANK_CHAR", "SINGLE_QUOTED_STRING", "DOUBLE_QUOTED_STRING",
    "UNQUOTED_STRING", "'.'", "'?'", "'-'", "'+'", "'('", "')'"
]




class cifProtoParser(Parser):
    grammarFileName = "cifProto.g"
    antlr_version = version_str_to_tuple("3.1.2")
    antlr_version_str = "3.1.2"
    tokenNames = tokenNames

    def __init__(self, input, state=None):
        if state is None:
            state = RecognizerSharedState()

        Parser.__init__(self, input, state)


        self.dfa8 = self.DFA8(
            self, 8,
            eot = self.DFA8_eot,
            eof = self.DFA8_eof,
            min = self.DFA8_min,
            max = self.DFA8_max,
            accept = self.DFA8_accept,
            special = self.DFA8_special,
            transition = self.DFA8_transition
            )

        self.dfa10 = self.DFA10(
            self, 10,
            eot = self.DFA10_eot,
            eof = self.DFA10_eof,
            min = self.DFA10_min,
            max = self.DFA10_max,
            accept = self.DFA10_accept,
            special = self.DFA10_special,
            transition = self.DFA10_transition
            )

        self.dfa16 = self.DFA16(
            self, 16,
            eot = self.DFA16_eot,
            eof = self.DFA16_eof,
            min = self.DFA16_min,
            max = self.DFA16_max,
            accept = self.DFA16_accept,
            special = self.DFA16_special,
            transition = self.DFA16_transition
            )

        self.dfa18 = self.DFA18(
            self, 18,
            eot = self.DFA18_eot,
            eof = self.DFA18_eof,
            min = self.DFA18_min,
            max = self.DFA18_max,
            accept = self.DFA18_accept,
            special = self.DFA18_special,
            transition = self.DFA18_transition
            )

        self.dfa27 = self.DFA27(
            self, 27,
            eot = self.DFA27_eot,
            eof = self.DFA27_eof,
            min = self.DFA27_min,
            max = self.DFA27_max,
            accept = self.DFA27_accept,
            special = self.DFA27_special,
            transition = self.DFA27_transition
            )

        self.dfa25 = self.DFA25(
            self, 25,
            eot = self.DFA25_eot,
            eof = self.DFA25_eof,
            min = self.DFA25_min,
            max = self.DFA25_max,
            accept = self.DFA25_accept,
            special = self.DFA25_special,
            transition = self.DFA25_transition
            )

        self.dfa28 = self.DFA28(
            self, 28,
            eot = self.DFA28_eot,
            eof = self.DFA28_eof,
            min = self.DFA28_min,
            max = self.DFA28_max,
            accept = self.DFA28_accept,
            special = self.DFA28_special,
            transition = self.DFA28_transition
            )

        self.dfa30 = self.DFA30(
            self, 30,
            eot = self.DFA30_eot,
            eof = self.DFA30_eof,
            min = self.DFA30_min,
            max = self.DFA30_max,
            accept = self.DFA30_accept,
            special = self.DFA30_special,
            transition = self.DFA30_transition
            )












    paraphrases = []
    def getErrorMessage(self, e, tokenNames):
      msg = Parser.getErrorMessage(self, e, tokenNames)
      if len(self.paraphrases) > 0:
        paraphrase = self.paraphrases[-1]
        msg += " " + paraphrase
      return msg



    # $ANTLR start "parse"
    # cifProto.g:40:1: parse[builder] : cif EOF ;
    def parse(self, builder):

        self.builder = builder
        try:
            try:
                # cifProto.g:42:2: ( cif EOF )
                # cifProto.g:42:4: cif EOF
                pass
                self._state.following.append(self.FOLLOW_cif_in_parse50)
                self.cif()

                self._state.following.pop()
                self.match(self.input, EOF, self.FOLLOW_EOF_in_parse52)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return

    # $ANTLR end "parse"


    # $ANTLR start "cif"
    # cifProto.g:47:1: cif : ( COMMENTS )? ( WHITESPACE )* ( data_block ( ( WHITESPACE )* data_block )* ( WHITESPACE )? )? ;
    def cif(self, ):

        try:
            try:
                # cifProto.g:48:2: ( ( COMMENTS )? ( WHITESPACE )* ( data_block ( ( WHITESPACE )* data_block )* ( WHITESPACE )? )? )
                # cifProto.g:48:4: ( COMMENTS )? ( WHITESPACE )* ( data_block ( ( WHITESPACE )* data_block )* ( WHITESPACE )? )?
                pass
                # cifProto.g:48:4: ( COMMENTS )?
                alt1 = 2
                LA1_0 = self.input.LA(1)

                if (LA1_0 == COMMENTS) :
                    alt1 = 1
                if alt1 == 1:
                    # cifProto.g:48:5: COMMENTS
                    pass
                    self.match(self.input, COMMENTS, self.FOLLOW_COMMENTS_in_cif65)



                # cifProto.g:48:16: ( WHITESPACE )*
                while True: #loop2
                    alt2 = 2
                    LA2_0 = self.input.LA(1)

                    if (LA2_0 == WHITESPACE) :
                        alt2 = 1


                    if alt2 == 1:
                        # cifProto.g:48:17: WHITESPACE
                        pass
                        self.match(self.input, WHITESPACE, self.FOLLOW_WHITESPACE_in_cif70)


                    else:
                        break #loop2


                # cifProto.g:48:30: ( data_block ( ( WHITESPACE )* data_block )* ( WHITESPACE )? )?
                alt6 = 2
                LA6_0 = self.input.LA(1)

                if (LA6_0 == DATA_BLOCK_HEADING) :
                    alt6 = 1
                if alt6 == 1:
                    # cifProto.g:48:32: data_block ( ( WHITESPACE )* data_block )* ( WHITESPACE )?
                    pass
                    self._state.following.append(self.FOLLOW_data_block_in_cif76)
                    self.data_block()

                    self._state.following.pop()
                    # cifProto.g:48:43: ( ( WHITESPACE )* data_block )*
                    while True: #loop4
                        alt4 = 2
                        LA4_0 = self.input.LA(1)

                        if (LA4_0 == WHITESPACE) :
                            LA4_1 = self.input.LA(2)

                            if (LA4_1 == WHITESPACE or LA4_1 == DATA_BLOCK_HEADING) :
                                alt4 = 1


                        elif (LA4_0 == DATA_BLOCK_HEADING) :
                            alt4 = 1


                        if alt4 == 1:
                            # cifProto.g:48:45: ( WHITESPACE )* data_block
                            pass
                            # cifProto.g:48:45: ( WHITESPACE )*
                            while True: #loop3
                                alt3 = 2
                                LA3_0 = self.input.LA(1)

                                if (LA3_0 == WHITESPACE) :
                                    alt3 = 1


                                if alt3 == 1:
                                    # cifProto.g:48:45: WHITESPACE
                                    pass
                                    self.match(self.input, WHITESPACE, self.FOLLOW_WHITESPACE_in_cif80)


                                else:
                                    break #loop3


                            self._state.following.append(self.FOLLOW_data_block_in_cif83)
                            self.data_block()

                            self._state.following.pop()


                        else:
                            break #loop4


                    # cifProto.g:48:71: ( WHITESPACE )?
                    alt5 = 2
                    LA5_0 = self.input.LA(1)

                    if (LA5_0 == WHITESPACE) :
                        alt5 = 1
                    if alt5 == 1:
                        # cifProto.g:48:72: WHITESPACE
                        pass
                        self.match(self.input, WHITESPACE, self.FOLLOW_WHITESPACE_in_cif89)










            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return

    # $ANTLR end "cif"


    # $ANTLR start "loop_body"
    # cifProto.g:51:1: loop_body : v1= value ( ( WHITESPACE )+ v2= value )* ;
    def loop_body(self, ):

        v1 = None

        v2 = None


        self.curr_loop_values = flex.std_string()
        try:
            try:
                # cifProto.g:53:2: (v1= value ( ( WHITESPACE )+ v2= value )* )
                # cifProto.g:53:4: v1= value ( ( WHITESPACE )+ v2= value )*
                pass
                self._state.following.append(self.FOLLOW_value_in_loop_body112)
                v1 = self.value()

                self._state.following.pop()
                #action start
                self.curr_loop_values.append(str(((v1 is not None) and [self.input.toString(v1.start,v1.stop)] or [None])[0]))
                #action end
                # cifProto.g:55:8: ( ( WHITESPACE )+ v2= value )*
                while True: #loop8
                    alt8 = 2
                    alt8 = self.dfa8.predict(self.input)
                    if alt8 == 1:
                        # cifProto.g:55:10: ( WHITESPACE )+ v2= value
                        pass
                        # cifProto.g:55:10: ( WHITESPACE )+
                        cnt7 = 0
                        while True: #loop7
                            alt7 = 2
                            LA7_0 = self.input.LA(1)

                            if (LA7_0 == WHITESPACE) :
                                alt7 = 1


                            if alt7 == 1:
                                # cifProto.g:55:10: WHITESPACE
                                pass
                                self.match(self.input, WHITESPACE, self.FOLLOW_WHITESPACE_in_loop_body125)


                            else:
                                if cnt7 >= 1:
                                    break #loop7

                                eee = EarlyExitException(7, self.input)
                                raise eee

                            cnt7 += 1


                        self._state.following.append(self.FOLLOW_value_in_loop_body139)
                        v2 = self.value()

                        self._state.following.pop()
                        #action start
                        self.curr_loop_values.append(str(((v2 is not None) and [self.input.toString(v2.start,v2.stop)] or [None])[0]))
                        #action end


                    else:
                        break #loop8


                #action start
                self.paraphrases.pop()
                #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return

    # $ANTLR end "loop_body"


    # $ANTLR start "save_frame"
    # cifProto.g:62:1: save_frame : SAVE_FRAME_HEADING ( ( WHITESPACE )+ data_items )+ ( WHITESPACE )+ SAVE ;
    def save_frame(self, ):

        SAVE_FRAME_HEADING1 = None

        try:
            try:
                # cifProto.g:63:2: ( SAVE_FRAME_HEADING ( ( WHITESPACE )+ data_items )+ ( WHITESPACE )+ SAVE )
                # cifProto.g:63:4: SAVE_FRAME_HEADING ( ( WHITESPACE )+ data_items )+ ( WHITESPACE )+ SAVE
                pass
                SAVE_FRAME_HEADING1=self.match(self.input, SAVE_FRAME_HEADING, self.FOLLOW_SAVE_FRAME_HEADING_in_save_frame174)
                #action start
                self.builder.start_save_frame(SAVE_FRAME_HEADING1.text)
                #action end
                # cifProto.g:65:3: ( ( WHITESPACE )+ data_items )+
                cnt10 = 0
                while True: #loop10
                    alt10 = 2
                    alt10 = self.dfa10.predict(self.input)
                    if alt10 == 1:
                        # cifProto.g:65:5: ( WHITESPACE )+ data_items
                        pass
                        # cifProto.g:65:5: ( WHITESPACE )+
                        cnt9 = 0
                        while True: #loop9
                            alt9 = 2
                            LA9_0 = self.input.LA(1)

                            if (LA9_0 == WHITESPACE) :
                                alt9 = 1


                            if alt9 == 1:
                                # cifProto.g:65:5: WHITESPACE
                                pass
                                self.match(self.input, WHITESPACE, self.FOLLOW_WHITESPACE_in_save_frame182)


                            else:
                                if cnt9 >= 1:
                                    break #loop9

                                eee = EarlyExitException(9, self.input)
                                raise eee

                            cnt9 += 1


                        self._state.following.append(self.FOLLOW_data_items_in_save_frame185)
                        self.data_items()

                        self._state.following.pop()


                    else:
                        if cnt10 >= 1:
                            break #loop10

                        eee = EarlyExitException(10, self.input)
                        raise eee

                    cnt10 += 1


                # cifProto.g:65:31: ( WHITESPACE )+
                cnt11 = 0
                while True: #loop11
                    alt11 = 2
                    LA11_0 = self.input.LA(1)

                    if (LA11_0 == WHITESPACE) :
                        alt11 = 1


                    if alt11 == 1:
                        # cifProto.g:65:31: WHITESPACE
                        pass
                        self.match(self.input, WHITESPACE, self.FOLLOW_WHITESPACE_in_save_frame190)


                    else:
                        if cnt11 >= 1:
                            break #loop11

                        eee = EarlyExitException(11, self.input)
                        raise eee

                    cnt11 += 1


                self.match(self.input, SAVE, self.FOLLOW_SAVE_in_save_frame193)
                #action start
                self.builder.end_save_frame()
                #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return

    # $ANTLR end "save_frame"


    # $ANTLR start "data_items"
    # cifProto.g:69:1: data_items : ( ( TAG WHITESPACE value ) | ( loop_header ( WHITESPACE )* loop_body ) );
    def data_items(self, ):

        TAG2 = None
        value3 = None


        self.paraphrases.append("in data items")
        try:
            try:
                # cifProto.g:72:2: ( ( TAG WHITESPACE value ) | ( loop_header ( WHITESPACE )* loop_body ) )
                alt13 = 2
                LA13_0 = self.input.LA(1)

                if (LA13_0 == TAG) :
                    alt13 = 1
                elif (LA13_0 == LOOP_) :
                    alt13 = 2
                else:
                    nvae = NoViableAltException("", 13, 0, self.input)

                    raise nvae

                if alt13 == 1:
                    # cifProto.g:72:5: ( TAG WHITESPACE value )
                    pass
                    # cifProto.g:72:5: ( TAG WHITESPACE value )
                    # cifProto.g:72:7: TAG WHITESPACE value
                    pass
                    TAG2=self.match(self.input, TAG, self.FOLLOW_TAG_in_data_items220)
                    self.match(self.input, WHITESPACE, self.FOLLOW_WHITESPACE_in_data_items222)
                    self._state.following.append(self.FOLLOW_value_in_data_items224)
                    value3 = self.value()

                    self._state.following.pop()
                    #action start
                    self.builder.add_data_item(TAG2.text, ((value3 is not None) and [self.input.toString(value3.start,value3.stop)] or [None])[0])
                    #action end





                elif alt13 == 2:
                    # cifProto.g:75:10: ( loop_header ( WHITESPACE )* loop_body )
                    pass
                    # cifProto.g:75:10: ( loop_header ( WHITESPACE )* loop_body )
                    # cifProto.g:75:12: loop_header ( WHITESPACE )* loop_body
                    pass
                    self._state.following.append(self.FOLLOW_loop_header_in_data_items243)
                    self.loop_header()

                    self._state.following.pop()
                    # cifProto.g:75:24: ( WHITESPACE )*
                    while True: #loop12
                        alt12 = 2
                        LA12_0 = self.input.LA(1)

                        if (LA12_0 == WHITESPACE) :
                            alt12 = 1


                        if alt12 == 1:
                            # cifProto.g:75:24: WHITESPACE
                            pass
                            self.match(self.input, WHITESPACE, self.FOLLOW_WHITESPACE_in_data_items245)


                        else:
                            break #loop12


                    self._state.following.append(self.FOLLOW_loop_body_in_data_items248)
                    self.loop_body()

                    self._state.following.pop()
                    #action start

                    try:
                      self.builder.add_loop(self.curr_loop_headers, data=self.curr_loop_values)
                    except AssertionError, e:
                      print e

                    #action end





                #action start
                self.paraphrases.pop()
                #action end

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return

    # $ANTLR end "data_items"


    # $ANTLR start "data_block"
    # cifProto.g:85:1: data_block : DATA_BLOCK_HEADING ( ( WHITESPACE )+ ( data_items | save_frame ) )* ;
    def data_block(self, ):

        DATA_BLOCK_HEADING4 = None

        try:
            try:
                # cifProto.g:86:2: ( DATA_BLOCK_HEADING ( ( WHITESPACE )+ ( data_items | save_frame ) )* )
                # cifProto.g:86:4: DATA_BLOCK_HEADING ( ( WHITESPACE )+ ( data_items | save_frame ) )*
                pass
                DATA_BLOCK_HEADING4=self.match(self.input, DATA_BLOCK_HEADING, self.FOLLOW_DATA_BLOCK_HEADING_in_data_block265)
                #action start
                self.builder.add_data_block(DATA_BLOCK_HEADING4.text)
                #action end
                # cifProto.g:88:8: ( ( WHITESPACE )+ ( data_items | save_frame ) )*
                while True: #loop16
                    alt16 = 2
                    alt16 = self.dfa16.predict(self.input)
                    if alt16 == 1:
                        # cifProto.g:88:10: ( WHITESPACE )+ ( data_items | save_frame )
                        pass
                        # cifProto.g:88:10: ( WHITESPACE )+
                        cnt14 = 0
                        while True: #loop14
                            alt14 = 2
                            LA14_0 = self.input.LA(1)

                            if (LA14_0 == WHITESPACE) :
                                alt14 = 1


                            if alt14 == 1:
                                # cifProto.g:88:10: WHITESPACE
                                pass
                                self.match(self.input, WHITESPACE, self.FOLLOW_WHITESPACE_in_data_block278)


                            else:
                                if cnt14 >= 1:
                                    break #loop14

                                eee = EarlyExitException(14, self.input)
                                raise eee

                            cnt14 += 1


                        # cifProto.g:88:22: ( data_items | save_frame )
                        alt15 = 2
                        LA15_0 = self.input.LA(1)

                        if (LA15_0 == TAG or LA15_0 == LOOP_) :
                            alt15 = 1
                        elif (LA15_0 == SAVE_FRAME_HEADING) :
                            alt15 = 2
                        else:
                            nvae = NoViableAltException("", 15, 0, self.input)

                            raise nvae

                        if alt15 == 1:
                            # cifProto.g:88:24: data_items
                            pass
                            self._state.following.append(self.FOLLOW_data_items_in_data_block283)
                            self.data_items()

                            self._state.following.pop()


                        elif alt15 == 2:
                            # cifProto.g:88:37: save_frame
                            pass
                            self._state.following.append(self.FOLLOW_save_frame_in_data_block287)
                            self.save_frame()

                            self._state.following.pop()





                    else:
                        break #loop16






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return

    # $ANTLR end "data_block"


    # $ANTLR start "loop_header"
    # cifProto.g:91:1: loop_header : LOOP_ ( ( WHITESPACE )+ TAG )+ WHITESPACE ;
    def loop_header(self, ):

        TAG5 = None

        self.curr_loop_headers = flex.std_string()
        try:
            try:
                # cifProto.g:93:2: ( LOOP_ ( ( WHITESPACE )+ TAG )+ WHITESPACE )
                # cifProto.g:93:4: LOOP_ ( ( WHITESPACE )+ TAG )+ WHITESPACE
                pass
                self.match(self.input, LOOP_, self.FOLLOW_LOOP__in_loop_header308)
                #action start
                self.paraphrases.append("in loop_")
                #action end
                # cifProto.g:94:3: ( ( WHITESPACE )+ TAG )+
                cnt18 = 0
                while True: #loop18
                    alt18 = 2
                    alt18 = self.dfa18.predict(self.input)
                    if alt18 == 1:
                        # cifProto.g:94:5: ( WHITESPACE )+ TAG
                        pass
                        # cifProto.g:94:5: ( WHITESPACE )+
                        cnt17 = 0
                        while True: #loop17
                            alt17 = 2
                            LA17_0 = self.input.LA(1)

                            if (LA17_0 == WHITESPACE) :
                                alt17 = 1


                            if alt17 == 1:
                                # cifProto.g:94:5: WHITESPACE
                                pass
                                self.match(self.input, WHITESPACE, self.FOLLOW_WHITESPACE_in_loop_header316)


                            else:
                                if cnt17 >= 1:
                                    break #loop17

                                eee = EarlyExitException(17, self.input)
                                raise eee

                            cnt17 += 1


                        TAG5=self.match(self.input, TAG, self.FOLLOW_TAG_in_loop_header319)
                        #action start
                        self.curr_loop_headers.append(str(TAG5.text))
                        #action end


                    else:
                        if cnt18 >= 1:
                            break #loop18

                        eee = EarlyExitException(18, self.input)
                        raise eee

                    cnt18 += 1


                self.match(self.input, WHITESPACE, self.FOLLOW_WHITESPACE_in_loop_header329)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return

    # $ANTLR end "loop_header"


    # $ANTLR start "inapplicable"
    # cifProto.g:103:1: inapplicable : '.' ;
    def inapplicable(self, ):

        try:
            try:
                # cifProto.g:104:2: ( '.' )
                # cifProto.g:104:4: '.'
                pass
                self.match(self.input, 31, self.FOLLOW_31_in_inapplicable344)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return

    # $ANTLR end "inapplicable"


    # $ANTLR start "unknown"
    # cifProto.g:106:1: unknown : '?' ;
    def unknown(self, ):

        try:
            try:
                # cifProto.g:106:9: ( '?' )
                # cifProto.g:106:11: '?'
                pass
                self.match(self.input, 32, self.FOLLOW_32_in_unknown353)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return

    # $ANTLR end "unknown"

    class value_return(ParserRuleReturnScope):
        def __init__(self):
            ParserRuleReturnScope.__init__(self)





    # $ANTLR start "value"
    # cifProto.g:108:1: value : ( inapplicable | unknown | '-' | char_string | numeric | text_field );
    def value(self, ):

        retval = self.value_return()
        retval.start = self.input.LT(1)

        self.paraphrases.append("in value")
        try:
            try:
                # cifProto.g:111:3: ( inapplicable | unknown | '-' | char_string | numeric | text_field )
                alt19 = 6
                LA19 = self.input.LA(1)
                if LA19 == 31:
                    LA19_1 = self.input.LA(2)

                    if (LA19_1 == DIGIT) :
                        alt19 = 5
                    elif (LA19_1 == EOF or LA19_1 == WHITESPACE or LA19_1 == DATA_BLOCK_HEADING) :
                        alt19 = 1
                    else:
                        nvae = NoViableAltException("", 19, 1, self.input)

                        raise nvae

                elif LA19 == 32:
                    alt19 = 2
                elif LA19 == 33:
                    LA19_3 = self.input.LA(2)

                    if (LA19_3 == DIGIT or LA19_3 == 31) :
                        alt19 = 5
                    elif (LA19_3 == EOF or LA19_3 == WHITESPACE or LA19_3 == DATA_BLOCK_HEADING) :
                        alt19 = 3
                    else:
                        nvae = NoViableAltException("", 19, 3, self.input)

                        raise nvae

                elif LA19 == CHAR_STRING:
                    alt19 = 4
                elif LA19 == DIGIT or LA19 == 34:
                    alt19 = 5
                elif LA19 == SEMI_COLON_TEXT_FIELD:
                    alt19 = 6
                else:
                    nvae = NoViableAltException("", 19, 0, self.input)

                    raise nvae

                if alt19 == 1:
                    # cifProto.g:111:5: inapplicable
                    pass
                    self._state.following.append(self.FOLLOW_inapplicable_in_value375)
                    self.inapplicable()

                    self._state.following.pop()


                elif alt19 == 2:
                    # cifProto.g:111:20: unknown
                    pass
                    self._state.following.append(self.FOLLOW_unknown_in_value379)
                    self.unknown()

                    self._state.following.pop()


                elif alt19 == 3:
                    # cifProto.g:111:30: '-'
                    pass
                    self.match(self.input, 33, self.FOLLOW_33_in_value383)


                elif alt19 == 4:
                    # cifProto.g:111:36: char_string
                    pass
                    self._state.following.append(self.FOLLOW_char_string_in_value387)
                    self.char_string()

                    self._state.following.pop()


                elif alt19 == 5:
                    # cifProto.g:111:51: numeric
                    pass
                    self._state.following.append(self.FOLLOW_numeric_in_value392)
                    self.numeric()

                    self._state.following.pop()


                elif alt19 == 6:
                    # cifProto.g:111:60: text_field
                    pass
                    self._state.following.append(self.FOLLOW_text_field_in_value395)
                    self.text_field()

                    self._state.following.pop()


                retval.stop = self.input.LT(-1)

                #action start
                self.paraphrases.pop()
                #action end

            except RecognitionException, re:

                raise re


        finally:

            pass

        return retval

    # $ANTLR end "value"


    # $ANTLR start "unsigned_integer"
    # cifProto.g:117:1: unsigned_integer : ( DIGIT )+ ;
    def unsigned_integer(self, ):
